added cases